syntax = "proto3";

option java_multiple_files = true;
option java_package = "shopping.cart.proto";

package shoppingcart;

// Events published to Kafka

message ItemAdded {
    string cartId = 1;
    string itemId = 2;
    int32 quantity = 3;
    bytes random_payload = 4;
}

message ItemQuantityAdjusted {
    string cartId = 1;
    string itemId = 2;
    int32 quantity = 3;
    bytes random_payload = 4;
}

message ItemRemoved {
    string cartId = 1;
    string itemId = 2;
}

message CheckedOut {
    string cartId = 1;
    bytes random_payload = 4;
}
